added social links, footer links

--- a/src/scss/common/_form.scss
+++ b/src/scss/common/_form.scss
@@ -11,8 +11,9 @@
     font-family: $second-font;
     font-size: 1.8rem;
     height: 40px;
+    max-width: 360px;
     padding: 0 15px;
-    width: 360px;
+    width: 100%;
   }
 }
 
