--- a/src/scss/common/_title-line.scss
+++ b/src/scss/common/_title-line.scss
@@ -1,7 +1,8 @@
 .title-line {
   border-top: 2px solid #4e6655;
   height: 0;
-  width: 50px;
+  max-width: 50px;
+  width: 100%;
 
   &--item {
     transform: translateX(-65px) translateY(25px);
