--- a/src/scss/sections/_contacts-section.scss
+++ b/src/scss/sections/_contacts-section.scss
@@ -65,6 +65,7 @@
       font-family: $second-font;
       font-size: 2.4rem;
       font-weight: 600;
+      text-transform: none;
     }
 
     &-text {
