--- a/src/scss/sections/_intro-section.scss
+++ b/src/scss/sections/_intro-section.scss
@@ -10,9 +10,9 @@
     }
 
     &__item {
-      height: 20px;
+      height: 35px;
       margin-bottom: 10px;
-      width: 20px;
+      width: 31px;
     }
   }
 
@@ -72,6 +72,6 @@
 
 .logo {
   height: 168px;
-  margin: 0 auto;
+  margin: 55px auto 0;
   width: 289px;
 }
