--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -22,6 +22,7 @@ $body-lh: 1;
 $container-width: 1215px;
 $grid-columns: 12;
 $grid-gutter-width: 30px;
+$grid-no-gutter: 0;
 
 $grid-breakpoints: (
   xl: 1199px,
