--- a/src/scss/sections/_addition-section.scss
+++ b/src/scss/sections/_addition-section.scss
@@ -1,24 +1,48 @@
 .addition-section {
   position: relative;
 
+  .container {
+    @media (max-width: 575px) {
+      margin-bottom: 80px;
+    }
+  }
+
   h2 {
     margin-left: 15px;
+
+    @media (max-width: 575px) {
+      font-size: 2rem;
+      margin: 0 0 40px;
+      text-align: center;
+    }
   }
 
   &__title {
     color: $text-gray-4;
     font-family: $second-font;
     font-size: 2.4rem;
-    margin-bottom: 30px;
-    margin-top: 75px;
+    margin: 75px 0 30px;
     width: 355px;
+
+    @media (max-width: 575px) {
+      font-size: 2rem;
+      margin: 0 0 20px;
+    }
 
     &--middle {
       margin-bottom: 60px;
+
+      @media (max-width: 575px) {
+        margin-bottom: 20px;
+      }
     }
 
     &--long {
       margin-bottom: 90px;
+
+      @media (max-width: 575px) {
+        margin-bottom: 20px;
+      }
     }
   }
 
@@ -34,5 +58,10 @@
     height: 300px;
     margin-bottom: 80px;
     width: 315px;
+
+    @media (max-width: 575px) {
+      height: auto;
+      margin-bottom: 30px;
+    }
   }
 }
