--- a/src/scss/sections/_products-section.scss
+++ b/src/scss/sections/_products-section.scss
@@ -1,10 +1,28 @@
 .products-section {
-  padding-bottom: 0;
-  padding-top: 120px;
+  padding: 120px 0;
   position: relative;
 
-  > h2 {
+  @media (max-width: 575px) {
+    padding: 120px 0 0;
+  }
+
+  .container {
+    @media (max-width: 575px) {
+      margin-bottom: 80px;
+    }
+  }
+
+  &__title {
     margin-left: 15px;
+
+    @media (max-width: 575px) {
+      margin-left: 0;
+      text-align: center;
+
+      h2 {
+        font-size: 2rem;
+      }
+    }
   }
 
   &__card {
@@ -32,6 +50,10 @@
       line-height: 1.5;
       margin-bottom: 25px;
       text-align: center;
+
+      @media (max-width: 575px) {
+        font-size: 2rem;
+      }
     }
 
     &-price {
