--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -67,4 +67,4 @@ $cubic-transition: 0.55s $ease-in-out-cubic;
 $bar-length: 28px;
 $bar-thickness: 4px;
 $nav-item-delay: 0.05s;
-$nav-width: 3.75rem;
+$nav-width: 375px;
