--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -1,4 +1,6 @@
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -12,10 +14,12 @@ html {
 body {
   color: $body-font-color;
   font: $body-fw $body-fz/$body-lh $body-font;
+  overflow: hidden;
 }
 
 ul {
   list-style: none;
+  margin: 0;
 }
 
 img {
@@ -28,6 +32,31 @@ a {
   &:hover {
     text-decoration: none;
   }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+button {
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+  outline: none !important;
+}
+
+p {
+  margin: 0;
+  padding: 0;
+}
+
+li:hover {
+  text-decoration: none;
 }
 
 input,
@@ -73,22 +102,6 @@ input:focus:placeholder,
 textarea:focus:placeholder {
   opacity: 0;
   transition: opacity 0.3s ease;
-}
-
-button {
-  background-color: transparent;
-  border: 0;
-  cursor: pointer;
-  outline: none !important;
-}
-
-p {
-  margin: 0;
-  padding: 0;
-}
-
-li:hover {
-  text-decoration: none;
 }
 
 @media (max-width: 575px) {
