--- a/src/scss/sections/_addition-section.scss
+++ b/src/scss/sections/_addition-section.scss
@@ -1,19 +1,31 @@
 .addition-section {
+  overflow: hidden;
   position: relative;
+
+  @media (max-width: 1199px) {
+    padding-bottom: 40px;
+  }
+
+  @media (max-width: 575px) {
+    padding-bottom: 0;
+  }
 
   .container {
     @media (max-width: 575px) {
-      margin-bottom: 80px;
+      margin-bottom: 40px;
     }
   }
 
-  h2 {
+  &__header {
     margin-left: 15px;
+
+    @media (max-width: 1199px) {
+      font-size: 3rem;
+    }
 
     @media (max-width: 575px) {
       font-size: 2rem;
       margin: 0 0 40px;
-      text-align: center;
     }
   }
 
@@ -23,6 +35,11 @@
     font-size: 2.4rem;
     margin: 75px 0 30px;
     width: 355px;
+
+    @media (max-width: 1199px) {
+      font-size: 2rem;
+      width: 290px;
+    }
 
     @media (max-width: 575px) {
       font-size: 2rem;
@@ -52,12 +69,21 @@
     font-size: 1.8rem;
     font-weight: $body-fw;
     line-height: 1.5;
+
+    @media (max-width: 575px) {
+      font-size: 1.4rem;
+    }
   }
 
   &-box {
     height: 300px;
     margin-bottom: 80px;
     width: 315px;
+
+    @media (max-width: 1199px) {
+      margin-bottom: 20px;
+      width: 290px;
+    }
 
     @media (max-width: 575px) {
       height: auto;
