--- a/src/scss/sections/_author-section.scss
+++ b/src/scss/sections/_author-section.scss
@@ -1,4 +1,5 @@
 .author-section {
+  overflow: hidden;
   position: relative;
 
   .container {
@@ -8,11 +9,14 @@
   }
 
   &__img {
-    height: 327px;
     width: 700px;
 
-    @media (max-width: 575px) {
+    @media (max-width: 1199px) {
       height: auto;
+      width: 90%;
+    }
+
+    @media (max-width: 575px) {
       width: 344px;
     }
   }
@@ -32,6 +36,11 @@
   &__title {
     margin: 60px 0 30px;
     text-align: left;
+
+    @media (max-width: 1199px) {
+      font-size: 3rem;
+      margin-bottom: 10px;
+    }
 
     @media (max-width: 575px) {
       font-size: 2rem;
@@ -57,6 +66,15 @@
     font-family: $second-font;
     font-size: 1.8rem;
     line-height: 1.66;
+
+    @media (max-width: 1199px) {
+      font-size: 1.5rem;
+      padding-right: 40px;
+    }
+
+    @media (max-width: 575px) {
+      font-size: 1.4rem;
+    }
   }
 }
 
