--- a/src/scss/sections/_contacts-section.scss
+++ b/src/scss/sections/_contacts-section.scss
@@ -1,6 +1,15 @@
 .contacts-section {
+  overflow: hidden;
   padding-bottom: 120px;
   position: relative;
+
+  @media (max-width: 1199px) {
+    padding-bottom: 60px;
+  }
+
+  @media (max-width: 575px) {
+    padding-bottom: 40px;
+  }
 
   .container {
     margin-bottom: 0;
@@ -9,13 +18,16 @@
     }
   }
 
-  h2 {
+  &__header {
     margin-left: 15px;
+
+    @media (max-width: 1199px) {
+      font-size: 3rem;
+    }
 
     @media (max-width: 575px) {
       font-size: 2rem;
       margin: 0 0 20px;
-      text-align: center;
     }
   }
 
@@ -36,7 +48,7 @@
       margin-left: 23px;
 
       @media (max-width: 575px) {
-        font-size: 1.7rem;
+        font-size: 1.3rem;
         margin-left: 20px;
       }
     }
@@ -48,9 +60,13 @@
     width: 429px;
     z-index: 1;
 
+    @media (max-width: 1199px) {
+      height: auto;
+      width: 400px;
+    }
+
     @media (max-width: 575px) {
-      height: 376px;
-      width: 307px;
+      display: none;
     }
 
     &::before {
@@ -65,27 +81,25 @@
       width: 429px;
       z-index: -2;
 
-      @media (max-width: 575px) {
-        height: 376px;
-        left: 18px;
-        top: 18px;
-        width: 307px;
+      @media (max-width: 1199px) {
+        height: 455px;
+        width: 370px;
       }
     }
 
     &--first {
       margin: 65px 0 0 90px;
 
-      @media (max-width: 575px) {
-        margin: 35px 0 0;
+      @media (max-width: 1199px) {
+        margin: 40px 0 0 40px;
       }
     }
 
     &--second {
       margin: 130px 0 0 60px;
 
-      @media (max-width: 575px) {
-        margin: 60px 0 0;
+      @media (max-width: 1199px) {
+        margin: 0 auto;
       }
     }
   }
@@ -100,8 +114,12 @@
     position: relative;
     width: 100%;
 
+    @media (max-width: 1199px) {
+      margin: 40px auto 0;
+    }
+
     @media (max-width: 575px) {
-      margin: 70px 0 90px;
+      margin: 10px 0 90px;
     }
 
     &-title {
@@ -122,7 +140,7 @@
       font-size: 1.8rem;
       font-weight: $body-fw;
       line-height: 1.5;
-      margin: 35px 0 25px;
+      margin: 35px 0 10px;
       text-align: center;
 
       @media (max-width: 575px) {
@@ -138,6 +156,10 @@
   &__social {
     margin: 130px 0 0 90px;
     position: relative;
+
+    @media (max-width: 1199px) {
+      margin: 0 0 0 40px;
+    }
 
     @media (max-width: 575px) {
       margin: 0;
