--- a/src/scss/sections/_intro-section.scss
+++ b/src/scss/sections/_intro-section.scss
@@ -1,6 +1,11 @@
 .intro-section {
+  overflow: hidden;
   padding: 0 0 120px;
   position: relative;
+
+  @media (max-width: 1199px) {
+    padding: 0 0 60px;
+  }
 
   @media (max-width: 575px) {
     div {
@@ -10,6 +15,10 @@
 
   &-social {
     margin-top: 645px;
+
+    @media (max-width: 1199px) {
+      margin: auto 20px 0;
+    }
 
     @media (max-width: 575px) {
       display: flex !important;
@@ -73,6 +82,10 @@
     transform: translateX(440px) translateY(47px);
     z-index: 99;
 
+    @media (max-width: 1199px) {
+      transform: translateX(220px) translateY(20px);
+    }
+
     @media (max-width: 575px) {
       display: none;
     }
@@ -89,6 +102,10 @@
     width: 685px;
     z-index: 1;
 
+    @media (max-width: 1199px) {
+      height: auto;
+    }
+
     @media (max-width: 575px) {
       height: 100%;
       width: 100%;
@@ -100,6 +117,11 @@
   margin-left: 135px;
   width: 540px;
 
+  @media (max-width: 1199px) {
+    margin: 0;
+    width: 100%;
+  }
+
   @media (max-width: 575px) {
     margin: 0;
     width: 100%;
@@ -109,6 +131,12 @@
     letter-spacing: 4px;
     margin: 75px 0 30px;
     text-align: left;
+
+    @media (max-width: 1199px) {
+      font-size: 2.5rem;
+      letter-spacing: 2px;
+      margin: 35px 0;
+    }
 
     @media (max-width: 575px) {
       display: none;
@@ -122,7 +150,7 @@
         font-size: 1.7rem;
         letter-spacing: 4px;
         line-height: 1.4;
-        margin: 30px 0 30px 15px;
+        margin: 30px auto;
       }
     }
   }
@@ -138,22 +166,15 @@
       font-size: 2rem;
       line-height: 1.5;
       margin: 0;
-      padding: 30px 9px 0;
+      padding: 40px 9px 0;
       text-align: center;
       transform: translateY(430px);
     }
   }
 
-  &__btn {
-    margin: 25px 0 85px;
-
+  button {
     @media (max-width: 575px) {
-      font-size: 1.6rem;
-      height: 45px;
-      margin: 10px auto 0;
-      text-transform: inherit;
       transform: translateY(440px);
-      width: 200px;
     }
   }
 }
@@ -162,6 +183,12 @@
   height: 168px;
   margin: 55px auto 0;
   width: 289px;
+
+  @media (max-width: 1199px) {
+    height: auto;
+    margin: 35px auto 0;
+    width: 50%;
+  }
 
   @media (max-width: 575px) {
     display: none;
