--- a/src/scss/sections/_portfolio-section.scss
+++ b/src/scss/sections/_portfolio-section.scss
@@ -1,4 +1,5 @@
 .main {
+  overflow: hidden;
   position: relative;
 }
 
@@ -7,17 +8,20 @@
 
   .container {
     @media (max-width: 575px) {
-      margin-bottom: 80px;
+      margin-bottom: 40px;
     }
   }
 
-  &__title {
-    text-align: left;
-    transform: translateX(180px) translateY(-40px);
+  &__header {
+    margin: 0 15px 50px;
+    @media (max-width: 1199px) {
+      h2 {
+        font-size: 3rem;
+      }
+    }
 
     @media (max-width: 575px) {
-      margin-left: 30px;
-      transform: none;
+      margin: 0 0 30px;
 
       h2 {
         font-size: 2rem;
@@ -37,8 +41,12 @@
     margin-bottom: 45px;
     text-transform: inherit;
 
+    @media (max-width: 1199px) {
+      margin: 30px 0 15px;
+    }
+
     @media (max-width: 575px) {
-      margin: 25px 0 10px 65px;
+      display: none;
     }
 
     &--left::after {
@@ -50,6 +58,12 @@
       position: absolute;
       top: 15px;
       width: 100%;
+
+      @media (max-width: 1199px) {
+        left: -10%;
+        top: 8%;
+        width: 25px;
+      }
 
       @media (max-width: 575px) {
         left: 0;
@@ -67,6 +81,12 @@
       top: 15px;
       width: 100%;
 
+      @media (max-width: 1199px) {
+        left: 2%;
+        top: 8%;
+        width: 25px;
+      }
+
       @media (max-width: 575px) {
         left: 0;
         top: 95px;
@@ -78,6 +98,11 @@
     margin-left: 105px;
     width: 400px;
 
+    @media (max-width: 1199px) {
+      margin-left: 50px;
+      width: 90%;
+    }
+
     @media (max-width: 575px) {
       margin-left: 0;
       margin-top: 80px;
@@ -87,6 +112,11 @@
 
   &__box {
     width: 385px;
+
+    @media (max-width: 1199px) {
+      padding-right: 40px;
+      width: 100%;
+    }
 
     &-title {
       color: $text-gray;
@@ -110,8 +140,14 @@
       max-width: 385px;
       width: 100%;
 
+      @media (max-width: 1199px) {
+        font-size: 1.5rem;
+        width: 100%;
+      }
+
       @media (max-width: 575px) {
-        max-width: 345px;
+        font-size: 1.4rem;
+        width: 345px;
       }
     }
   }
