--- a/src/scss/sections/_products-section.scss
+++ b/src/scss/sections/_products-section.scss
@@ -1,19 +1,34 @@
 .products-section {
-  padding: 120px 0;
+  overflow: hidden;
+  padding: 120px 0 0;
   position: relative;
 
+  @media (max-width: 1199px) {
+    padding: 60px 0 0;
+  }
+
   @media (max-width: 575px) {
-    padding: 120px 0 0;
+    padding: 40px 0;
   }
 
   .container {
     @media (max-width: 575px) {
-      margin-bottom: 80px;
+      margin-bottom: 40px;
     }
   }
 
-  &__title {
+  .col {
+    @media (max-width: 575px) {
+      margin: 0 auto;
+    }
+  }
+
+  &__header {
     margin-left: 15px;
+
+    @media (max-width: 1199px) {
+      font-size: 3rem;
+    }
 
     @media (max-width: 575px) {
       margin-left: 0;
@@ -31,7 +46,12 @@
     height: 480px;
     margin-top: 50px;
     padding: 30px 0 25px;
+    position: relative;
     width: 350px;
+
+    @media (max-width: 1199px) {
+      width: 290px;
+    }
 
     &-name {
       color: $text-black;
@@ -80,8 +100,15 @@
     }
 
     &-btn {
-      margin-top: 63px;
+      bottom: 5%;
+      left: 20%;
+      position: absolute;
       text-align: center;
+      width: 200px;
+
+      @media (max-width: 1199px) {
+        left: 15%;
+      }
     }
   }
 }
