--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -71,6 +71,10 @@ textarea {
   font-size: 1.8rem;
   padding: 20px 15px 0;
   resize: none;
+
+  @media (max-width: 575px) {
+    padding: 10px;
+  }
 }
 
 input::placeholder,
@@ -78,6 +82,10 @@ textarea::placeholder {
   color: $text-gray;
   font-family: $second-font;
   font-size: 1.7rem;
+
+  @media (max-width: 575px) {
+    font-size: 1.2rem;
+  }
 }
 
 input::placeholder,
@@ -86,8 +94,8 @@ textarea::placeholder {
   transition: opacity 0.3s ease;
 }
 
-input:placeholder,
-textarea:placeholder {
+input::placeholder,
+textarea::placeholder {
   opacity: 1;
   transition: opacity 0.3s ease;
 }
