--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,6 +8,7 @@ $text-gray-3: #77917e;
 $text-gray-4: #40573d;
 $text-white: #fff;
 $text-light-gray: #f6f6f6;
+$text-light-gray-2: #fffcf8;
 $text-black: #000;
 
 $html-font-size: 10px;
