--- a/src/scss/common/_button.scss
+++ b/src/scss/common/_button.scss
@@ -25,7 +25,7 @@
 }
 
 .btn-product {
-  background-color: #fffcf8;
+  background-color: $text-light-gray-2;
   border: 1px solid $text-gray-3;
   color: $text-gray-3;
   display: inline-block;
@@ -42,6 +42,21 @@
 
   &:hover {
     background-color: $text-gray-3;
-    color: #fffcf8;
+    color: $text-light-gray-2;
   }
+}
+
+.btn-modal {
+  background-color: $text-gray-3;
+  color: $text-white;
+  display: inline-block;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.8rem;
+  height: 50px;
+  margin-top: 38px;
+  max-width: 200px;
+  text-align: center;
+  text-transform: none;
+  transition: all 0.2s ease-in;
+  width: 200px;
 }
