--- a/src/scss/common/_nav-menu.scss
+++ b/src/scss/common/_nav-menu.scss
@@ -84,7 +84,6 @@
 
 .nav__content {
   background-color: $text-gray-3;
-  height: 820px;
   opacity: 0;
   padding: 179px 0;
   position: absolute;
@@ -111,7 +110,7 @@
     visibility: visible;
 
     @media (max-width: 575px) {
-      height: auto;
+      height: 100%;
       opacity: 0.95;
     }
 
