--- a/src/scss/sections/_products-section.scss
+++ b/src/scss/sections/_products-section.scss
@@ -41,7 +41,7 @@
   }
 
   &__card {
-    background-color: #fffcf8;
+    background-color: $text-light-gray-2;
     box-shadow: 0 0 25px rgba(119, 145, 126, 0.6);
     height: 480px;
     margin-top: 50px;
