--- a/src/scss/common/_form.scss
+++ b/src/scss/common/_form.scss
@@ -3,7 +3,19 @@
     border: 2px solid $text-gray-3;
     margin: 0 auto 20px;
     max-width: 385px;
+    position: relative;
     width: 100%;
+
+    @media (max-width: 575px) {
+      margin: 0 0 10px;
+      max-width: 300px;
+
+      textarea {
+        font-size: 1rem;
+        height: 7rem;
+        width: 50rem;
+      }
+    }
   }
 
   &__input {
@@ -14,6 +26,10 @@
     max-width: 360px;
     padding: 0 15px;
     width: 100%;
+
+    @media (max-width: 575px) {
+      height: 25px;
+    }
   }
 }
 
@@ -32,6 +48,11 @@
     font-size: 1.7rem;
     margin-bottom: 10px;
     margin-left: 10%;
+
+    @media (max-width: 575px) {
+      font-size: 1.3rem;
+      margin: 0;
+    }
   }
 
   &__button {
@@ -40,6 +61,70 @@
     &-modal {
       margin-bottom: 35px;
       margin-left: 10%;
+
+      @media (max-width: 575px) {
+        margin-left: 0;
+      }
     }
   }
+}
+
+.popup {
+  align-items: center;
+  display: none;
+  height: 100%;
+  justify-content: center;
+  left: 0;
+  opacity: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 9999;
+
+  &__overlay {
+    background-color: $text-black;
+    height: 100%;
+    opacity: 0.3;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: -1;
+  }
+
+  &__thanks {
+    background-color: $text-white;
+    height: 320px;
+    max-width: 100%;
+    padding: 60px;
+    position: relative;
+    text-align: center;
+    width: 500px;
+    z-index: 999;
+
+    &-text {
+      box-sizing: border-box;
+      font-family: "Montserrat", sans-serif;
+      font-size: 1.8rem;
+      line-height: 1.5;
+      margin: 0 auto;
+      max-width: 360px;
+      width: 100%;
+    }
+  }
+}
+
+.popup.active {
+  display: flex;
+  opacity: 1;
+  transition: opacity 1s;
+}
+
+.close {
+  cursor: pointer;
+  font-family: "Montserrat";
+  font-size: 2.7rem;
+  font-weight: 500;
+  position: absolute;
+  right: 15px;
+  top: 15px;
 }
