--- a/src/scss/sections/_contacts-section.scss
+++ b/src/scss/sections/_contacts-section.scss
@@ -120,6 +120,7 @@
 
     @media (max-width: 575px) {
       margin: 10px 0 90px;
+      width: 345px;
     }
 
     &-title {
@@ -130,6 +131,7 @@
 
       @media (max-width: 575px) {
         font-family: $main-font;
+        font-size: 1.8rem;
         font-weight: $body-fw;
       }
     }
@@ -145,6 +147,8 @@
 
       @media (max-width: 575px) {
         font-size: 1.7rem;
+        font-size: 1.5rem;
+        margin: 25px 0 10px;
       }
 
       &--second {
@@ -154,7 +158,7 @@
   }
 
   &__social {
-    margin: 130px 0 0 90px;
+    margin-top: 130px;
     position: relative;
 
     @media (max-width: 1199px) {
